Fixed OXUIB-730 Buttons Decline/Accept not aligned with Reminder in accept task mail

--- a/ui/apps/io.ox/calendar/style.less
+++ b/ui/apps/io.ox/calendar/style.less
@@ -669,6 +669,8 @@
 
     &.inline {
         display: inline-block;
+        // needed so accept buttons etc align correctly with select box
+        vertical-align: bottom;
     }
 }
 
